# tapi

./: .env  .gitignore  Cargo.toml  README.md  coverage.sh  index.html  package-lock.json  package.json  tarpaulin-report.html
.github/workflows/: coverage.yml  release.yml
design/: Pages_And_Components.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: requests.rs
src-tauri/tests/: request_tests.rs
src/components/: request.rs
src/features/main/: mod.rs  page.rs
src/features/main/components/: body.rs  builder.rs  mod.rs  response.rs
tests/: comp_request_tests.rs
