[package]
name = "tapi-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sycamore = { version = "0.9", features = ["suspense"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.74", features = [
    "HtmlTextAreaElement",
    "KeyboardEvent"
]}

[dev-dependencies]
fantoccini = "0.21.2"
tokio = { version = "1.42.0", features = [ "full" ]}

[workspace]
members = ["src-tauri"]
